--- a/fast_api_practice/templates/user.html
+++ b/fast_api_practice/templates/user.html
@@ -6,24 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users</title>
+    <link rel="stylesheet" href="{{ url_for('static', path='styles/users.css') }}">
 </head>
 
 <body>
     <h1>List of Users</h1>
     {% if users %}
-    <div>
+    <div id="users">
         {{users}}
-        <table>
-            {% for i in users.items %}
-            <tr>
-                <td>{{i}}</td>
-            </tr>
-            {% endfor %}
-        </table>
     </div>
     {% else %}
     <div>NO USER</div>
     {% endif %}
 </body>
+
 <script src="{{ url_for('static', path='scripts/user.js') }}"></script>
+
 </html>
