--- a/fast_api_practice/static/styles/index.css
+++ b/fast_api_practice/static/styles/index.css
@@ -1,3 +1,21 @@
 *{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+.forms{
+    display: flex;
+    justify-content:space-between;
+    padding: 20px;
+    width: 25%;
+}
+
+.form_buttons{
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: purple;
+    color: white;
+}
+.form_buttons:hover{
+    background-color: violet;
+}
