--- a/fast_api_practice/templates/index.html
+++ b/fast_api_practice/templates/index.html
@@ -12,7 +12,41 @@
 <body>
     <div>
         <h1>FastAPI</h1>
-        Hello World!
+        <div>
+            <div>
+                Hello World!
+            </div>
+            <div>
+                This is a simple implementation of Fast API. It is a fast web framework for building APIs using Python 3
+                and based on standard Python type hints. Its key features are:
+                <ul>
+                    <li>
+                        Fast: Very high performance, on par with NodeJS and Go (thanks
+                        to Starlette and Pydantic). One of the fastest Python frameworks available. Increase the speed
+                        to develop features by about 200% to 300%.
+                    </li>
+                    <li>
+                        Fewer bugs: Reduce about 40% of human (developer) induced errors.
+                    </li>
+                    <li>
+                        Intuitive: Great editor support. Completion everywhere. Less time debugging.
+                    </li>
+                    <li>
+                        Easy: Designed to be easy to use and learn. Less time reading docs.
+                    </li>
+                    <li>
+                        Short: Minimize code duplication. Multiple features from each parameter declaration. Fewer bugs.
+                    </li>
+                    <li>
+                        Robust: Get production-ready code. With automatic interactive documentation.
+                    </li>
+                    <li>
+                        Standards-based: Based on (and fully compatible with) the open standards for APIs: OpenAPI
+                        (previously known as Swagger) and JSON Schema.
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <div id="forms" class="forms">
         <div>
@@ -26,16 +60,16 @@
             </form>
         </div>
         <!-- <div>
-            <form action="/delete_user" method="post">
+            <form action="/docs" method="post">
                 <input type="submit" value="Delete User" class="form_buttons">
             </form>
         </div>
         <div>
-            <form action="/update_user" method="post">
+            <form action="/docs" method="post">
                 <input type="submit" value="Update User" class="form_buttons">
             </form>
-        </div> -->
-    </div>
+        </div>
+    </div> -->
 </body>
 
 </html>
