--- a/fast_api_practice/templates/user.html
+++ b/fast_api_practice/templates/user.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users</title>
-    <link rel="stylesheet" href="{{ url_for('static', path='styles/users.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='styles/user.css') }}">
 </head>
 
 <body>
