sqlite routes added

--- a/fast_api_practice/templates/index.html
+++ b/fast_api_practice/templates/index.html
@@ -59,17 +59,12 @@
                 <input type="submit" value="Add User" class="form_buttons">
             </form>
         </div>
-        <!-- <div>
-            <form action="/docs" method="post">
-                <input type="submit" value="Delete User" class="form_buttons">
-            </form>
-        </div>
         <div>
-            <form action="/docs" method="post">
-                <input type="submit" value="Update User" class="form_buttons">
+            <form action="/enter_student_id" method="post">
+                <input type="submit" value="sqlite" class="form_buttons">
             </form>
         </div>
-    </div> -->
+    </div>
 </body>
 
 </html>
