--- a/fast_api_practice/templates/addUser.html
+++ b/fast_api_practice/templates/addUser.html
@@ -15,16 +15,16 @@
         <form action="/added_successfully" method="post" enctype="multipart/form-data">
             <div class="fields">
                 <label for="first_name">First Name:</label>
-                <input type="text" name="first_name" id="first_name">
+                <input type="text" name="first_name" id="first_name" required>
             </div>
             <div class="fields">
                 <label for="last_name">Last Name:</label>
-                <input type="text" name="last_name" id="last_name">
+                <input type="text" name="last_name" id="last_name" required>
             </div>
             <div class="fields">
                 <p>Please select gender:</p>
                 <div>
-                    <input type="radio" name="gender" id="male" value="male">
+                    <input type="radio" name="gender" id="male" value="male" required>
                     <label for="male">Male</label>
                 </div>
                 <div>
